# Physical-AI-Humanoid-Robotics-Book

./: .env.example  .env.production.example  .gitignore  .spacesignore  ARCHITECTURE.md  CHATBOT_README.md  CHATKIT_INTEGRATION_DOCS.md  CLAUDE.md  COMPLETION-REPORT.md  Dockerfile  LOCAL_SETUP.md  README.md  SYSTEM_OVERVIEW.md  app.py  check_collection.py  docker-compose.yml  docusaurus.config.js  ingest_all_modules.py  main-api.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  reset_collection.py  run_ingestion.js  run_ingestion.py  sidebars.js  test_api.py  test_md_extraction.py
.claude/: settings.local.json
.docusaurus/: client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
api/: main.py  rag.js  test_global_query.py
api/config/: database.py  settings.py  vector_db.py
api/docs/: openapi.py
api/middleware/: auth.py  error_handler.py  rate_limiter.py
api/models/: document.py  request.py  response.py
api/services/: chat.py  embedding.py  ingestion.py  retrieval.py  session.py
api/utils/: cache.py  citations.py  logger.py  privacy.py  text_processing.py  validators.py
config/: ingestion_config.py
data/: book-content.json
db/: database.py
docs/: intro.md
docs/capstone-project/: autonomous-humanoid.md  index.md
docs/module-1-ros2/: index.md  installation-setup.md  nodes-topics-services.md  practical-exercises.md  rclpy-basics.md  urdf-description.md
docs/module-2-digital-twin/: gazebo-simulation.md  gazebo-world-setup.md  index.md  (+6 more)
frontend/: embed_snippet.js  instructions.md  package.json  test_widget.html
middleware/: auth.py
rag/: ingestion.py  retriever.py
services/: ai_client.py  cache.py  chat_adapter.py
tests/: conftest.py  test_api_endpoints.py  test_api_integration.py  test_chat_service.py  test_embedding_service.py  test_final_integration.py  test_ingestion_service.py  test_retrieval_service.py  test_session_service.py  test_utils.py
(+126 files in other folders)
