[project]
name = "physical-ai-humanoid-robotics-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg==0.29.0",
    "fastapi==0.104.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "openai==1.3.8",
    "pydantic==2.8.2",
    "pyjwt==2.8.0",
    "pypdf2==3.0.1",
    "python-docx==1.1.0",
    "python-dotenv==1.0.0",
    "qdrant-client==1.8.0",
    "redis==5.0.1",
    "requests==2.32.5",
    "uvicorn==0.24.0",
]
